--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
   <!-- ========= Top Bar ========= -->
   <header class="max-w-7xl mx-auto px-6 md:px-12 py-6 flex items-center justify-between">
     <!-- Logo (24 × 24) -->
-    <a href="#" class="flex items-center gap-2">
+    <a href="/" class="flex items-center gap-2">
       <img src="assets/logo.svg" alt="Kalpa Labs logo" class="w-12 h-12" />
       <span class="font-medium tracking-wide">KALPA LABS</span>
     </a>
 
     <nav class="hidden md:flex items-center gap-10 text-sm">
-      <a href="#aboutus" class="hover:text-gray-700">About</a>
-      <a href="contact-us.html" class="hover:text-gray-700">Contact Us</a>
+      <a href="/#aboutus" class="hover:text-gray-700">About</a>
+      <a href="/contact-us.html" class="hover:text-gray-700">Contact Us</a>
     </nav>
   </header>
 
