contactus -> contact-us.html

--- a/contact-us.html
+++ b/contact-us.html
@@ -47,7 +47,7 @@
 
     <nav class="hidden md:flex items-center gap-10 text-sm">
       <a href="/#aboutus" class="hover:text-gray-700">About</a>
-      <a href="/contactus" class="hover:text-gray-700">Contact Us</a>
+      <a href="/contact-us.html" class="hover:text-gray-700">Contact Us</a>
     </nav>
   </header>
 
