--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </a>
           </div>
           <p class="text-sm text-gray-700 text-left space-y-1">
-            AI-native features at Quizziz. ex-Sprinkler
+            AI-native features @ Quizizz, Ex-Sprinklr
           </p>
         </div>
 
