--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </a>
           </div>
           <p class="text-sm text-gray-700 text-left space-y-1">
-            sub-nanoseconds low-latency sytems at HFTs.
+            sub-microseconds low-latency sytems at HFTs.
           </p>
         </div>
       </div>
